2010-02-13  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows/UIElementTest.cs: Allow reusing ConcreteUIElement
	type in other tests.
	* System.Windows.Media.Imaging/WriteableBitmapTest.cs: New. Basic
	tests for most API.

2010-02-12  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/FrameworkElementTest.cs: Update some more
	  tests to SL3 behaviour

2010-02-12  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/FrameworkElementTest.cs: Add some tests which
	  show that FE.DataContext should not register names of
	  elements.

2010-02-12  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ItemContainerGeneratorTest_Panel.cs:
	  Add some more tests for the IsNewlyRealized parameter in
	  ItemContainerGenerator.Generate.

2010-02-12  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ItemContainerGeneratorTest_Panel.cs:
	  Fix a few bugs in ItemContainerGenerator and add test cases
	  for the fixes. This resolves most of the big bugs we have
	  with VirtualizingPanel and fixes the non-fullscreen
	  recommendations page in Olympics.

2010-02-11  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Net/WebClientTest.cs: Add test case where Content-Encoding
	is 'gzip' - i.e. Content-Length represent the compressed, not the
	final, length of the data.

2010-02-11  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/ResourceDictionaryTest.cs: Add test to ensure
	  we look up merged dictionaries correctly.

2010-02-11  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/GridTestAuto.cs: We now invalidate a
	  little too aggressively and cause this test to fail. It's a
	  VirtualizingPanel/ScrollViewer bug.

	* System.Windows.Controls/ListBoxTest.cs: Add test to verify
	  that custom IScrollInfos override ScrollContentPresenter.

	* System.Windows.Automation.Peers/ScrollViewerAutomationPeerTest.cs:
	  We forcibly apply templates in
	  VirtualizingPanel/ScrollViewer/ScrollContentPresenter which